Add test containers and covered FoodController with tests