@@ -1,17 +1,30 @@
 package com.olehprukhnytskyi.macrotrackerfoodservice.controller;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.multipart;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import co.elastic.clients.elasticsearch.ElasticsearchClient;
+import co.elastic.clients.elasticsearch.core.SearchRequest;
+import co.elastic.clients.elasticsearch.core.SearchResponse;
+import co.elastic.clients.elasticsearch.core.search.Hit;
+import co.elastic.clients.util.ObjectBuilder;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.olehprukhnytskyi.macrotrackerfoodservice.config.AbstractMongoTest;
 import com.olehprukhnytskyi.macrotrackerfoodservice.dto.ApiError;
 import com.olehprukhnytskyi.macrotrackerfoodservice.dto.ApiResponse;
 import com.olehprukhnytskyi.macrotrackerfoodservice.dto.FoodPatchRequestDto;
@@ -21,22 +34,32 @@ import com.olehprukhnytskyi.macrotrackerfoodservice.dto.NutrimentsDto;
 import com.olehprukhnytskyi.macrotrackerfoodservice.dto.NutrimentsPatchDto;
 import com.olehprukhnytskyi.macrotrackerfoodservice.dto.PagedResponse;
 import com.olehprukhnytskyi.macrotrackerfoodservice.dto.Pagination;
+import com.olehprukhnytskyi.macrotrackerfoodservice.mapper.NutrimentsMapper;
+import com.olehprukhnytskyi.macrotrackerfoodservice.model.Food;
+import com.olehprukhnytskyi.macrotrackerfoodservice.repository.FoodRepository;
 import com.olehprukhnytskyi.macrotrackerfoodservice.service.FoodService;
+import com.olehprukhnytskyi.macrotrackerfoodservice.service.ImageService;
 import com.olehprukhnytskyi.macrotrackerfoodservice.service.RequestDeduplicationService;
 import com.olehprukhnytskyi.macrotrackerfoodservice.service.S3StorageService;
+import com.olehprukhnytskyi.macrotrackerfoodservice.service.impl.GeminiServiceImpl;
 import com.olehprukhnytskyi.macrotrackerfoodservice.util.CustomHeaders;
+import java.io.ByteArrayInputStream;
 import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.function.Function;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
@@ -44,21 +67,35 @@ import org.springframework.web.context.WebApplicationContext;
 import software.amazon.awssdk.services.s3.S3Client;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-class FoodControllerTest {
+class FoodControllerTest extends AbstractMongoTest {
     protected static MockMvc mockMvc;
-    @MockitoBean
-    private FoodService foodService;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+    @Autowired
+    private NutrimentsMapper nutrimentsMapper;
+
     @MockitoBean
     private S3Client s3Client;
     @MockitoBean
     private S3StorageService s3StorageService;
     @MockitoBean
     private RequestDeduplicationService requestDeduplicationService;
-    @Autowired
-    private ObjectMapper objectMapper;
+    @MockitoBean
+    private GeminiServiceImpl geminiService;
+    @MockitoBean
+    private ImageService imageService;
+    @MockitoBean
+    private ElasticsearchClient elasticsearchClient;
+
+    @MockitoSpyBean
+    private FoodService foodService;
+    @MockitoSpyBean
+    private FoodRepository foodRepository;
 
     private FoodRequestDto foodRequestDto;
     private FoodResponseDto foodResponseDto;
+    private Food food;
 
     @BeforeAll
     static void beforeAll(@Autowired WebApplicationContext applicationContext) {
@@ -69,6 +106,8 @@ class FoodControllerTest {
 
     @BeforeEach
     void setUp() {
+        foodRepository.deleteAll();
+
         NutrimentsDto nutrimentsDto = new NutrimentsDto();
         nutrimentsDto.setKcal(BigDecimal.valueOf(100));
         nutrimentsDto.setCarbohydrates(BigDecimal.valueOf(100));
@@ -89,20 +128,63 @@ class FoodControllerTest {
         foodResponseDto.setBrands("Brands");
         foodResponseDto.setImageUrl("https://image.url");
         foodResponseDto.setNutriments(nutrimentsDto);
+
+        food = Food.builder()
+                .productName("Product name")
+                .genericName("Generic name")
+                .code("12345678")
+                .brands("Brands")
+                .imageUrl("https://image.url")
+                .nutriments(nutrimentsMapper.toModel(nutrimentsDto))
+                .build();
+
+        foodRepository.save(Food.builder()
+                .id("11111111")
+                .code("11111111")
+                .userId(1L)
+                .productName("Rice")
+                .build());
+        foodRepository.save(Food.builder()
+                .id("22222222")
+                .code("22222222")
+                .userId(2L)
+                .productName("Potato")
+                .build());
+        foodRepository.save(Food.builder()
+                .id("33333333")
+                .code("33333333")
+                .userId(3L)
+                .productName("Tomato")
+                .build());
+    }
+
+    private <T> SearchResponse<T> generateSearchResponse(List<T> elements) {
+        @SuppressWarnings("unchecked")
+        List<Hit<T>> hits = elements.stream()
+                .map(element -> (Hit<T>) Hit.of(hit -> hit
+                        .index("1")
+                        .source(element)))
+                .toList();
+        return SearchResponse.of(sr -> sr
+                .hits(h -> h.hits(hits))
+                .took(100)
+                .timedOut(false)
+                .shards(builder -> builder.successful(1).failed(0).total(1))
+        );
     }
 
     @Test
     @DisplayName("When food exist, should return 200 OK and DTO")
     void findById_whenFoodExist_shouldReturn200AndDto() throws Exception {
         // Given
-        String foodId = "123";
-        FoodResponseDto foodDto = new FoodResponseDto();
-        foodDto.setId(foodId);
+        String foodId = "11111111";
+        FoodResponseDto foodDto = FoodResponseDto.builder().id(foodId).build();
 
         when(foodService.findById(foodId)).thenReturn(foodDto);
 
         // When
-        MvcResult mvcResult = mockMvc.perform(get("/api/foods/" + foodId))
+        MvcResult mvcResult = mockMvc.perform(
+                get("/api/foods/" + foodId))
                 .andExpect(status().isOk())
                 .andReturn();
 
@@ -115,21 +197,26 @@ class FoodControllerTest {
     @DisplayName("When food exist, should return 200 OK and DTO")
     void findByQuery_whenFoodExist_shouldReturn200AndDto() throws Exception {
         // Given
-        FoodResponseDto dto = new FoodResponseDto();
-        dto.setId("123");
+        SearchResponse<Food> elasticResponse = generateSearchResponse(List.of(food));
 
         Pagination pagination = new Pagination(0, 10, 1);
         PagedResponse<FoodResponseDto> pagedResponse = new PagedResponse<>(
-                List.of(dto), pagination);
+                List.of(foodResponseDto), pagination);
         String expected = objectMapper.writeValueAsString(pagedResponse);
 
-        when(foodService.findByQuery("apple", 0, 10)).thenReturn(pagedResponse.getData());
+        when(elasticsearchClient.search(
+                ArgumentMatchers.<Function<SearchRequest.Builder,
+                        ObjectBuilder<SearchRequest>>>any(),
+                eq(Food.class)
+        )).thenReturn(elasticResponse);
 
         // When
-        MvcResult mvcResult = mockMvc.perform(get("/api/foods")
+        MvcResult mvcResult = mockMvc.perform(
+                get("/api/foods")
                         .param("query", "apple")
                         .param("offset", "0")
-                        .param("limit", "10"))
+                        .param("limit", "10")
+                )
                 .andExpect(status().isOk())
                 .andReturn();
 
@@ -147,13 +234,21 @@ class FoodControllerTest {
                 Collections.emptyList(), pagination);
         String expected = objectMapper.writeValueAsString(pagedResponse);
 
-        when(foodService.findByQuery("apple", 0, 10)).thenReturn(Collections.emptyList());
+        SearchResponse<Food> elasticResponse = generateSearchResponse(List.of());
+
+        when(elasticsearchClient.search(
+                ArgumentMatchers.<Function<SearchRequest.Builder,
+                        ObjectBuilder<SearchRequest>>>any(),
+                eq(Food.class)
+        )).thenReturn(elasticResponse);
 
         // When
-        MvcResult mvcResult = mockMvc.perform(get("/api/foods")
+        MvcResult mvcResult = mockMvc.perform(
+                get("/api/foods")
                         .param("query", "apple")
                         .param("offset", "0")
-                        .param("limit", "10"))
+                        .param("limit", "10")
+                )
                 .andExpect(status().isNoContent())
                 .andReturn();
 
@@ -172,10 +267,12 @@ class FoodControllerTest {
         String expected = objectMapper.writeValueAsString(pagedResponse);
 
         // When
-        MvcResult mvcResult = mockMvc.perform(get("/api/foods")
+        MvcResult mvcResult = mockMvc.perform(
+                get("/api/foods")
                         .param("query", "apple")
                         .param("offset", "-10")
-                        .param("limit", "10"))
+                        .param("limit", "10")
+                )
                 .andExpect(status().isBadRequest())
                 .andReturn();
 
@@ -193,10 +290,12 @@ class FoodControllerTest {
         String expected = objectMapper.writeValueAsString(pagedResponse);
 
         // When
-        MvcResult mvcResult = mockMvc.perform(get("/api/foods")
+        MvcResult mvcResult = mockMvc.perform(
+                get("/api/foods")
                         .param("query", "apple")
                         .param("offset", "0")
-                        .param("limit", "-10"))
+                        .param("limit", "-10")
+                )
                 .andExpect(status().isBadRequest())
                 .andReturn();
 
@@ -210,14 +309,22 @@ class FoodControllerTest {
     void getSearchSuggestions_whenSuggestionsExist_shouldReturnOkAndList()
             throws Exception {
         // Given
-        List<String> mockSuggestions = List.of("apple pie", "apple juice");
+        SearchResponse<Food> searchResponse = generateSearchResponse(List.of(food));
+
+        List<String> mockSuggestions = List.of("Product name");
         String expected = objectMapper.writeValueAsString(mockSuggestions);
 
-        when(foodService.getSearchSuggestions("apple")).thenReturn(mockSuggestions);
+        when(elasticsearchClient.search(
+                ArgumentMatchers.<Function<SearchRequest.Builder,
+                        ObjectBuilder<SearchRequest>>>any(),
+                eq(Food.class)
+        )).thenReturn(searchResponse);
 
         // When & Then
-        mockMvc.perform(get("/api/foods/search-suggestions")
-                        .param("query", "apple"))
+        mockMvc.perform(
+                get("/api/foods/search-suggestions")
+                        .param("query", "apple")
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().json(expected));
     }
@@ -227,13 +334,21 @@ class FoodControllerTest {
     void getSearchSuggestions_whenNoSuggestions_shouldReturnNoContent()
             throws Exception {
         // Given
-        when(foodService.getSearchSuggestions("xyz"))
-                .thenReturn(Collections.emptyList());
+        SearchResponse<Food> searchResponse = generateSearchResponse(List.of());
+
+        when(elasticsearchClient.search(
+                ArgumentMatchers.<Function<SearchRequest.Builder,
+                        ObjectBuilder<SearchRequest>>>any(),
+                eq(Food.class)
+        )).thenReturn(searchResponse);
 
         // When & Then
-        mockMvc.perform(get("/api/foods/search-suggestions")
-                        .param("query", "xyz"))
-                .andExpect(status().isNoContent());
+        mockMvc.perform(
+                get("/api/foods/search-suggestions")
+                        .param("query", "xyz")
+                )
+                .andExpect(status().isNoContent())
+                .andExpect(content().string(""));
     }
 
     @Test
@@ -245,11 +360,10 @@ class FoodControllerTest {
     }
 
     @Test
-    @DisplayName("When request is valid, should return 201 Created and saved FoodResponseDto")
-    void save_whenRequestIsValid_shouldReturnCreated() throws Exception {
+    @DisplayName("When request is valid, should store and return 201 Created")
+    void save_whenRequestIsValid_shouldPersistInMongo() throws Exception {
         // Given
         String foodJson = objectMapper.writeValueAsString(foodRequestDto);
-        String expected = objectMapper.writeValueAsString(foodResponseDto);
 
         MockMultipartFile foodPart = new MockMultipartFile(
                 "food",
@@ -265,21 +379,42 @@ class FoodControllerTest {
                 "image-content".getBytes()
         );
 
-        when(foodService.createFoodWithImages(any(), any(), anyLong()))
-                .thenReturn(foodResponseDto);
+        when(imageService.resizeImage(any(), anyInt()))
+                .thenReturn(new ByteArrayInputStream("fake".getBytes()));
+        when(imageService.generateImageKey(any(), anyString(), anyInt()))
+                .thenReturn("images/products/test.png");
+        doNothing().when(imageService).validateImage(any());
+        when(s3StorageService.uploadFile(any(), anyLong(), anyString(), anyString()))
+                .thenReturn("https://mock-s3/image.jpg");
+        when(geminiService.generateKeywords(any())).thenReturn(List.of());
+        when(imageService.resizeImage(any(), anyInt()))
+                .thenReturn(new ByteArrayInputStream(new byte[0]));
 
         // When
-        MvcResult mvcResult = mockMvc.perform(multipart("/api/foods")
+        MvcResult mvcResult = mockMvc.perform(
+                multipart("/api/foods")
                         .file(foodPart)
                         .file(imagePart)
                         .header(CustomHeaders.X_USER_ID, 1L)
                         .header(CustomHeaders.X_REQUEST_ID, "requestId")
-                        .contentType(MediaType.MULTIPART_FORM_DATA))
+                        .contentType(MediaType.MULTIPART_FORM_DATA)
+                )
                 .andExpect(status().isCreated())
                 .andReturn();
+        FoodResponseDto response = objectMapper.readValue(mvcResult
+                .getResponse().getContentAsString(), FoodResponseDto.class);
 
         // Then
-        assertEquals(expected, mvcResult.getResponse().getContentAsString());
+        assertThat(response.getCode()).isEqualTo("12345678");
+        assertThat(response.getProductName()).isEqualTo("Product name");
+        assertThat(response.getImageUrl()).isEqualTo("https://mock-s3/image.jpg");
+
+        Optional<Food> saved = foodRepository.findById("12345678");
+        assertThat(saved).isPresent();
+        assertThat(saved.get().getProductName()).isEqualTo("Product name");
+
+        verify(s3StorageService, times(1))
+                .uploadFile(any(), anyLong(), anyString(), anyString());
     }
 
     @Test
@@ -307,39 +442,44 @@ class FoodControllerTest {
                 new ApiError("productName", "must not be null"));
         String expected = objectMapper.writeValueAsString(response);
 
-        // When
-        MvcResult mvcResult = mockMvc.perform(multipart("/api/foods")
+        // When & Then
+        mockMvc.perform(
+                multipart("/api/foods")
                         .file(foodPart)
                         .file(imagePart)
                         .header(CustomHeaders.X_USER_ID, 1L)
-                        .contentType(MediaType.MULTIPART_FORM_DATA))
+                        .contentType(MediaType.MULTIPART_FORM_DATA)
+                )
                 .andExpect(status().isBadRequest())
-                .andReturn();
-
-        // Then
-        assertEquals(expected, mvcResult.getResponse().getContentAsString());
+                .andExpect(content().json(expected));
     }
 
     @Test
     @DisplayName("When patch is successful, should return 200 and updated DTO")
     void patch_whenSuccessful_shouldReturn200AndUpdatedDto() throws Exception {
         // Given
-        String id = "123";
-        String requestJson = objectMapper.writeValueAsString(foodRequestDto);
-        String expected = objectMapper.writeValueAsString(foodResponseDto);
+        String id = "11111111";
 
-        when(foodService.patch(eq(id), any(FoodPatchRequestDto.class)))
-                .thenReturn(foodResponseDto);
+        FoodRequestDto requestDto = FoodRequestDto.builder()
+                .productName("New product name")
+                .build();
+        String requestJson = objectMapper.writeValueAsString(requestDto);
 
-        // When
-        MvcResult result = mockMvc.perform(patch("/api/foods/{id}", id)
+        FoodResponseDto responseDto = FoodResponseDto.builder()
+                .id("11111111")
+                .code("11111111")
+                .productName("New product name")
+                .build();
+        String expected = objectMapper.writeValueAsString(responseDto);
+
+        // When & Then
+        mockMvc.perform(
+                patch("/api/foods/{id}", id)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(requestJson))
+                        .content(requestJson)
+                )
                 .andExpect(status().isOk())
-                .andReturn();
-
-        // Then
-        assertEquals(expected, result.getResponse().getContentAsString());
+                .andExpect(content().json(expected));
     }
 
     @Test
@@ -347,11 +487,15 @@ class FoodControllerTest {
             + " should return 400 Bad Request with error")
     void patch_whenValidationError_shouldReturnBadRequest() throws Exception {
         // Given
-        NutrimentsPatchDto nutrimentsPatchDto = new NutrimentsPatchDto();
-        nutrimentsPatchDto.setCarbohydrates(BigDecimal.valueOf(-100));
+        String id = "11111111";
 
-        FoodPatchRequestDto requestDto = new FoodPatchRequestDto();
-        requestDto.setNutriments(nutrimentsPatchDto);
+        NutrimentsPatchDto nutrimentsPatchDto = NutrimentsPatchDto.builder()
+                .carbohydrates(BigDecimal.valueOf(-100))
+                .build();
+
+        FoodPatchRequestDto requestDto = FoodPatchRequestDto.builder()
+                .nutriments(nutrimentsPatchDto)
+                .build();
 
         String requestJson = objectMapper.writeValueAsString(requestDto);
         ApiResponse<Object> response = ApiResponse.error(
@@ -359,14 +503,35 @@ class FoodControllerTest {
                         "must be greater than or equal to 0.0"));
         String expected = objectMapper.writeValueAsString(response);
 
-        // When
-        MvcResult mvcResult = mockMvc.perform(patch("/api/foods/{id}", "123")
+        // When & Then
+        mockMvc.perform(
+                patch("/api/foods/{id}", id)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(requestJson))
+                        .content(requestJson)
+                )
                 .andExpect(status().isBadRequest())
-                .andReturn();
+                .andExpect(content().json(expected));
+    }
+
+    @Test
+    @DisplayName("When valid request, should return delete food")
+    void deleteFood_whenValidRequest_shouldDeleteFood() throws Exception {
+        // Given
+        String foodId = "22222222";
+
+        assertThat(foodRepository.findById(foodId)).isPresent();
+        doNothing().when(s3StorageService).deleteFolder(anyString());
+
+        // When
+        mockMvc.perform(
+                delete("/api/foods/{id}", foodId)
+                        .header(CustomHeaders.X_USER_ID, 2)
+                )
+                .andExpect(status().isNoContent())
+                .andExpect(content().string(""));
 
         // Then
-        assertEquals(expected, mvcResult.getResponse().getContentAsString());
+        verify(s3StorageService, times(1)).deleteFolder(anyString());
+        assertThat(foodRepository.findById(foodId)).isEmpty();
     }
 }
